--- a/library-frontend/package.json
+++ b/library-frontend/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@apollo/client": "^3.11.10",
     "graphql": "^16.9.0",
+    "graphql-ws": "^5.16.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
